feat: Added seperate model voice modes based on songs/moods

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -29,7 +29,6 @@
     <div class="control-group column">
       <label for="modelSelect">Model Provider</label>
       <select id="modelSelect">
-
         <option value="gemini-api">Gemini (API)</option>
         <option value="webllm">WebLLM</option>
         <option value="localserver">Local Server</option>
@@ -48,6 +47,15 @@
         <option value="kokoro">Kokoro JS (In-Browser)</option>
         <option value="localserver">Local Server</option>
         <option value="gemini-api">Gemini API (Free Tier)</option>
+      </select>
+    </div>
+
+    <div class="control-group column">
+      <label for="djModeSelect">DJ Mode</label>
+      <select id="djModeSelect">
+        <option value="radio">Radio (Default)</option>
+        <option value="party">Party (Excited)</option>
+        <option value="ghazal">Ghazal (Soft)</option>
       </select>
     </div>
 
